# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.rst  pyproject.toml
attakei_pre_commit_hooks/: check_conventional_commits.py
