[tool.poetry]
name = "attakei-pre-commit-hooks"
version = "0.0.0"
description = "attakei's pre-commit hooks collection"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[tool.poetry.scripts]
check-conventional-commits = "attakei_pre_commit_hooks.check_conventional_commits:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
